--- a/docroot/themes/custom/themekit/partials/views/cases/view--cases--listing.scss
+++ b/docroot/themes/custom/themekit/partials/views/cases/view--cases--listing.scss
@@ -2,14 +2,19 @@
   > .view-filters {
     position: relative;
     margin-bottom: 40px;
+    @include breakpoint(large) {
+      @include grid-column-size(7);
+    }
 
-    .form-inline {
-      display: flex;
-      @include breakpoint(small down) {
-        flex-direction: column;
-      }
+    .form-item__wrapper {
       @include breakpoint(medium) {
-        align-items: stretch;
+        display: flex;
+      }
+
+      .form-item {
+        @include breakpoint(medium) {
+          flex: 1 auto;
+        }
       }
     }
 
@@ -51,6 +56,8 @@
       padding: 12px 20px;
       background-color: $color-white;
       box-shadow: inset 0 0 0 2px $color-gray-100;
+      cursor: pointer;
+      @include global-transition(background-color);
       @include font-sizes(kicker-large);
       @include icon-after(angle-bottom) {
         @include global-transition(transform);
@@ -59,6 +66,9 @@
       }
       @include breakpoint(medium) {
         padding: 16px 20px 16px 32px;
+      }
+      @include selectors(active) {
+        background-color: $color-gray-200;
       }
 
       &.active::after {
@@ -86,21 +96,42 @@
       }
     }
 
+    .form-type-checkbox {
+      input {
+        @include visually-hidden;
+
+        &:checked + label {
+          @include label(default-active);
+        }
+      }
+
+      label {
+        @include label(default);
+        cursor: pointer;
+      }
+    }
+
     .bef-checkboxes {
+      display: none;
+      float: none;
       @include breakpoint(small down) {
         margin: 20px 20px 0;
       }
       @include breakpoint(medium) {
         margin-top: 24px;
       }
-
       @include breakpoint(small down) {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
       }
 
+      &.opened {
+        display: block;
+      }
+
       > .form-item {
+        display: inline-block;
         margin: 0 12px 12px 0;
       }
     }
