update taxanomy category

--- a/docroot/themes/custom/themekit/partials/taxonomy/category/full/taxonomy-term--category--full.html.twig
+++ b/docroot/themes/custom/themekit/partials/taxonomy/category/full/taxonomy-term--category--full.html.twig
@@ -30,7 +30,8 @@
     </div>
   </div>
 
-  <div class="block-slider-cases">
+  <div class="block-slider-cases field-view">
+    <h2 class="heading">{{ 'Deze cases tonen de kracht'|t }} <br> {{ 'van'|t }} {{ term.field_heading.value }}</h2>
     {{ drupal_view('cases', 'cases_slider') }}
   </div>
 
