--- a/docroot/themes/custom/themekit/partials/node/view-mode/full/node--full.scss
+++ b/docroot/themes/custom/themekit/partials/node/view-mode/full/node--full.scss
@@ -3,6 +3,7 @@
 .node--type-page,
 .node--type-case,
 .node--type-event,
+.node--type-news,
 .node--type-partner {
   &.node--view-mode-full {
     @include node--full;
@@ -30,5 +31,15 @@
         width: 417px;
       }
     }
+  }
+}
+
+.page-node-type-page,
+.page-node-type-case,
+.page-node-type-event,
+.page-node-type-news,
+.page-node-type-partner {
+  .region-content {
+    overflow-x: hidden;
   }
 }
