--- a/docroot/themes/custom/themekit/partials/component/cases-slider/block--cases-slider.scss
+++ b/docroot/themes/custom/themekit/partials/component/cases-slider/block--cases-slider.scss
@@ -5,18 +5,32 @@
 .block--cases-slider {
   @include breakpoint(medium) {
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 
-  .block-content {
+  .field--name-field-heading {
     margin-bottom: 40px;
     @include breakpoint(medium) {
       @include flex-grid-size(6);
+      order: -2;
       margin-bottom: 56px;
       flex-shrink: 0;
     }
     @include breakpoint(large) {
       @include flex-grid-size(4);
+    }
+  }
+
+  .field--name-field-link {
+    margin-top: 8px;
+    @include breakpoint(medium) {
+      order: -1;
+      margin-top: 12px;
+    }
+
+    a {
+      @include btn(primary);
     }
   }
 
