--- a/docroot/themes/custom/themekit/partials/component/cases-slider/block--inline-block--cases-slider.html.twig
+++ b/docroot/themes/custom/themekit/partials/component/cases-slider/block--inline-block--cases-slider.html.twig
@@ -1,5 +1,6 @@
 {% extends "@partials/component/block.html.twig" %}
 
+{% set rendered_content = content|without('field_link') %}
 {% set block = content['#block_content'] %}
 
 {% block content %}
@@ -7,4 +8,5 @@
   <div class="block-view">
     {{ drupal_view('cases', 'slider') }}
   </div>
+  {{ content.field_link }}
 {% endblock %}
