COD-20 - Change field name for links

--- a/docroot/themes/custom/themekit/partials/component/links/block--links.scss
+++ b/docroot/themes/custom/themekit/partials/component/links/block--links.scss
@@ -11,7 +11,7 @@
     }
   }
 
-  .field--name-field-link {
+  .field--name-field-links {
     @include breakpoint(medium) {
       columns: 2;
       column-gap: map-get($grid-column-gutter, medium);
