COD-26 - Set Slider views block for the cases slider; Remove cases_slider view block

--- a/docroot/themes/custom/themekit/partials/taxonomy/category/full/taxonomy-term--category--full.html.twig
+++ b/docroot/themes/custom/themekit/partials/taxonomy/category/full/taxonomy-term--category--full.html.twig
@@ -32,7 +32,7 @@
 
   <div class="block-slider-cases field-view">
     <h2 class="heading">{{ 'Deze cases tonen de kracht'|t }} <br> {{ 'van'|t }} {{ term.field_heading.value }}</h2>
-    {{ drupal_view('cases', 'cases_slider') }}
+    {{ drupal_view('cases', 'slider') }}
   </div>
 
 {% endblock %}
