--- a/docroot/themes/custom/themekit/partials/views/cases/view--cases--listing.scss
+++ b/docroot/themes/custom/themekit/partials/views/cases/view--cases--listing.scss
@@ -61,8 +61,11 @@
       @include font-sizes(kicker-large);
       @include icon-after(angle-bottom) {
         @include global-transition(transform);
-        margin-left: 7px;
+        margin-left: auto;
         font-size: rem-calc(24);
+        @include breakpoint(medium) {
+          margin-left: 7px;
+        }
       }
       @include breakpoint(medium) {
         padding: 16px 20px 16px 32px;
@@ -72,7 +75,7 @@
       }
 
       &.active::after {
-        transform: scaleX(-1);
+        transform: scaleY(-1);
       }
     }
 
@@ -121,13 +124,15 @@
         margin-top: 24px;
       }
       @include breakpoint(small down) {
-        display: flex;
         flex-direction: column;
         justify-content: flex-start;
       }
 
       &.opened {
-        display: block;
+        display: flex;
+        @include breakpoint(medium) {
+          display: block;
+        }
       }
 
       > .form-item {
