COD-13 - Add styles for news teaser; Add missed vews template; Adjust short date format

--- a/docroot/themes/custom/themekit/partials/node/type/news/full/node--news--full.html.twig
+++ b/docroot/themes/custom/themekit/partials/node/type/news/full/node--news--full.html.twig
@@ -10,7 +10,7 @@
     <div class="field-text">
       <h1 class="heading">{{ node.label }}</h1>
       <div class="field-category">
-        {{ node.getCreatedTime()|date('') }}
+        {{ node.getCreatedTime|format_date('short') }}
       </div>
       {{ content.field_intro }}
     </div>
