--- a/docroot/themes/custom/themekit/global/sass/components/_pager.scss
+++ b/docroot/themes/custom/themekit/global/sass/components/_pager.scss
@@ -90,7 +90,11 @@
       }
     }
 
-    &.is-active {
+    &.pager__item--link {
+      display: none;
+    }
+
+    &.pager__item--current {
       display: flex;
       justify-content: center;
       align-items: center;
