--- a/docroot/themes/custom/themekit/global/sass/base/_colors.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_colors.scss
@@ -32,6 +32,7 @@ $layout-bg-colors: (
 
 // Gradients
 $color-linear-horizontal: linear-gradient(259.21deg, $color-blue 4.15%, $color-purple-400 41.9%, $color-green-400 73.27%, $color-green-600 92.87%);
+$color-linear-horizontal-inverse: linear-gradient(259.21deg, $color-green-600 4.15%, $color-green-400 41.9%, $color-purple-400 73.27%, $color-blue 92.87%);
 $color-linear-vertical: linear-gradient(336.04deg, $color-blue 13.94%, $color-purple-400 44.83%, $color-green-400 70.5%, $color-green-600 86.54%);
 $color-linear-horizontal-green: linear-gradient(259.21deg, $color-green-400 4.15%, $color-green-600 92.87%);
 $color-linear-horizontal-purple: linear-gradient(265.07deg, $color-blue -133.86%, $color-purple-400 96.03%);
