COD-14 - Add frame shape for categories component; Add shape for categories component (instead of reuse text);

--- a/docroot/themes/custom/themekit/global/sass/base/_config.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_config.scss
@@ -273,4 +273,32 @@ $shapes: (
         4% 28%,
       ),
   ),
+  categories: (
+    width: 842px,
+    height: 579px,
+    color: $color-gray-100,
+    path: polygon(94% 7%, 100% 42%, 89% 93%, 16% 100%, 0 58%, 11% 0),
+  ),
+  categories-frame: (
+    width: 801px,
+    height: 638px,
+    color: $color-linear-horizontal,
+    path: polygon(
+        evenodd,
+        91% 0,
+        99% 42%,
+        86% 94%,
+        41% 100%,
+        1% 78%,
+        19% 1%,
+        calc(19% + 4.5px) calc(1% + 4px),
+        calc(91% - 3.5px) calc(0% + 5px),
+        calc(99% - 5px) 42%,
+        calc(86% - 4.5px) calc(94% - 4px),
+        calc(41% + 1px) calc(100% - 5px),
+        calc(1% + 6px) calc(78% - 3px),
+        calc(19% + 4.5px) calc(1% + 4px),
+        19% 1%,
+      ),
+  ),
 );
