Adjust admin theme (remove not needed submit buttons and adjust space on the layout-builder modal)

--- a/docroot/themes/custom/adminkit/sass/partials/_layout-builder-modal.scss
+++ b/docroot/themes/custom/adminkit/sass/partials/_layout-builder-modal.scss
@@ -90,3 +90,15 @@
     max-width: 100px;
   }
 }
+
+// Hide blocks for path-layout-builder iframe
+.path-layout-builder {
+  .page-wrapper {
+    > .region-meta,
+    > .region-sticky,
+    > .content-header,
+    > .sticky-shadow {
+      display: none;
+    }
+  }
+}
