--- a/docroot/themes/custom/themekit/global/sass/components/_drupal.scss
+++ b/docroot/themes/custom/themekit/global/sass/components/_drupal.scss
@@ -243,6 +243,10 @@ div[data-drupal-messages] {
         margin: 0;
       }
     }
+
+    #edit-rebuild-layout {
+      display: none;
+    }
   }
 }
 
